--- a/Portuguese_PT.lng
+++ b/Portuguese_PT.lng
@@ -1,5 +1,5 @@
 ﻿|~LANGUAGENAME||Portuguese (Português, Portugal)|
-|~LANGUAGEVERSION||1.22|
+|~LANGUAGEVERSION||1.23|
 |~LANGUAGEAUTHOR||José Gonçalves|
 |~LANGUAGEAUTHOREMAIL||joseaagoncalves@gmail.com, http://www.eufisica.com|
 |&OK||OK|
@@ -240,3 +240,4 @@
 |Custom database color:||Cor personalizada da Base de dados:|
 |Ensure same keyboard layouts during auto-type||Garantir o mesmo esquema de teclado durante a escrita automática|
 |Select &Notes Font||Seleccionar o tipo de letra das &Notas|
+|{PARAM} more entries||{PARAM} mais entradas|
