--- a/TraditionalChinese.lng
+++ b/TraditionalChinese.lng
@@ -1,7 +1,7 @@
 ﻿|~LANGUAGENAME|
 |繁體中文(臺灣)|
 |~LANGUAGEVERSION|
-|1.22 - 1|
+|1.23 - 1|
 |~LANGUAGEAUTHOR|
 |高祥元 (Kao Shiang-Yuan)|
 |~LANGUAGEAUTHOREMAIL|
@@ -1304,6 +1304,8 @@
 |確保自動輸入時使用相同的鍵盤配置|
 |Select &Notes Font|
 |選擇備註欄位的字型(&N)|
+|{PARAM} more entries|
+|還有{PARAM}個項目|
 |About KeePass...|
 |關於KeePass...|
 |Version|
