--- a/Turkish.lng
+++ b/Turkish.lng
@@ -741,3 +741,4 @@
 |Minimize main window after locking the workspace|           |Çalışma alanını kilitledikten sonra ana pencereyi küçült|
 |Ensure same keyboard layouts during auto-type|              |Kendiliğinden yazarken aynı tuş takımı düzenini koru|
 |Select &Notes Font|                                         |&Not Yazı Tipini Seçin|
+|{PARAM} more entries|                                       |{PARAM} kayıt daha|
